tests/paczka1/fuzzy1/78519508.err
Error in line 21: qnvn6YyN S72 47,2
Error in line 27: qnvn6YyN S973 44,1
Error in line 35: ?RMpOkaxgbÄ
Error in line 38: 2g3w80wn7kG S715 53,5
